<resources>
    <string name="app_name">瓦法</string>
    <string name="str_editText_hint_username">用户名</string>
    <string name="str_editText_hint_password">密&#160;码</string>
    <string name="str_editText_hint_new_password">设置密码</string>
    <string name="str_editText_hint_repeat_password">确认密码</string>
    <string name="str_editText_hint_real_name">姓名</string>
    <string name="str_editText_hint_contact_information">手机号码</string>
    <string name="str_editText_hint_answer">您的答案</string>
    <string name="str_editText_hint_question_answer">问题答案</string>
    <string name="str_prompt_username_check">请填写正确的手机号码</string>
    <string name="str_prompt_old_pwd_check">请填写原密码</string>
    <string name="str_prompt_phoneNumber_error">该用户没有手机号码</string>
    <string name="str_prompt_password_check">请填写密码</string>
    <string name="str_prompt_repeat_password_check">请填写确认密码</string>
    <string name="str_prompt_password_equal_check">两次输入的密码不一致</string>
    <string name="str_prompt_realname_check">请填写真实姓名</string>
    <string name="str_prompt_verify_code_check">请填写验证码</string>
    <string name="str_label_answer_question">回答问题</string>
    <string name="str_label_password_recovery_question">密码找回问题</string>
    <string name="str_checkbox_normal_user">普通用户</string>
    <string name="str_checkbox_courier">快&#160;递&#160;员</string>
    <string name="str_logo">安&#160;全&#160;用&#160;&#160;方&#160;便&#160;行</string>
    <string name="str_title_monitor_platform">监控平台</string>
    <string name="str_title_lock_position">锁定位置</string>
    <string name="str_title_unlock_bike">解&#160;&#160;锁</string>
    <string name="str_title_lock_bike">锁&#160;&#160;车</string>
    <string name="str_title_using_bike">车辆使用中</string>
    <string name="str_title_bike_exception">车辆异常</string>
    <string name="str_title_position_search">位置查询</string>
    <string name="str_title_bind_info">绑定信息</string>
    <string name="str_title_message_push">信息推送</string>
    <string name="str_title_express_search">快递单查询</string>
    <string name="str_title_my_express">我的快递</string>
    <string name="str_title_area_price_set">区域价格设置</string>
    <string name="str_title_receiving_order">接单</string>
    <string name="str_title_info_set">信息设置</string>
    <string name="str_title_payment_express">充值</string>
    <string name="str_title_my_account">我的账户</string>
    <string name="str_title_mall_type">快递商城</string>
    <string name="str_title_recharge_type">充值记录</string>
    <string name="str_title_place_order_edit">快递单</string>
    <string name="str_title_place_order_show">快递单详情</string>
    <string name="str_title_offer">报价列表</string>
    <string name="str_title_receive_order_show_edit">接单详情</string>
    <string name="str_title_my_lock_card">我的车牌</string>
    <string name="str_title_rent_bike">用车中</string>
    <string name="str_title_alarm_route">报警追踪</string>
    <string name="str_title_trip_payment">行程结算</string>
    <string name="str_title_personal_info">个人资料</string>
    <string name="str_title_personal_info_modify">修改资料</string>
    <string name="str_title_authentication">实名认证</string>
    <string name="str_title_authentication_result_info">认证信息</string>
    <string name="str_title_setting">系统设置</string>
    <string name="str_title_school_detail">校区详情</string>
    <string name="str_monitor_position">监控位置：</string>
    <string name="str_monitor_name">请填写监控点</string>
    <string name="str_bikeNumber">车号</string>
    <string name="str_bikeStatus">状态</string>
    <string name="str_monitor_time">监控时间</string>
    <string name="str_bikeStatus_OK">OK</string>
    <string name="str_bikeStatus_NG">NG</string>
    <string name="str_setting_item_msg">消息免打扰</string>
    <string name="str_setting_item_mylock">车牌号</string>
    <string name="str_setting_item_check_update">检查更新</string>
    <string name="str_setting_item_about_us">关于爱尚</string>
    <string name="str_setting_item_logout">账号登出</string>
    <string name="str_setting_item_removeBind_prompt">未绑定车锁，点击进行绑定操作</string>
    <string name="str_setting_item_msg_ps">免打扰打开后，APP在后台不会弹出消息推送。</string>
    <string name="str_label_mobile_number">手机号</string>
    <string name="str_label_device_number">车牌号：%1$s</string>
    <string name="str_prompt_bind_lock_number">请输入5位电子车牌号及3位校验码，进行绑定</string>
    <string name="str_prompt_my_lock_card_number">您的电子车牌号为</string>
    <string name="str_prompt_bind_lock_number_upload_pic">您也可以上传您车辆的全身靓照，以便于我们更好的为您提供防盗监控服务。(请横屏拍摄)</string>
    <string name="str_prompt_current_lock_position">当前停车位置</string>
    <string name="str_prompt_bind">请绑定手机号，绑定车锁</string>
    <string name="str_prompt_bind_using">不在有效桩位内</string>
    <string name="str_prompt_bind_exception">当前状态异常</string>
    <string name="str_prompt_bind_info">您的手机号：%1$s，已绑定车锁：</string>
    <string name="str_prompt_phone_number_invalid">手机号码必须是11位数字</string>
    <string name="str_prompt_verification_code_invalid">验证码必须是6位数字</string>
    <string name="str_prompt_bind_info_1">您的手机号：</string>
    <string name="str_prompt_bind_info_2">，已绑定车锁：</string>
    <string name="str_prompt_push_msg">您的自行车在%1$s离开了您的停车位置(%2$s),请确认是否正常。</string>
    <string name="str_prompt_abnormal_bike_id">车牌号</string>
    <string name="str_prompt_using_words">正常使用中，请停靠到指定停车港，才能正常锁车，并激活系统防盗功能。</string>
    <string name="str_prompt_abnormal_words">异常离开停车港，如是本人取车或车已找回，可点击解除异常按钮，否则请点击确认报警按钮，进行车辆追踪。</string>
    <string name="str_prompt_alarm_words_click">处于报警追踪状态，经过监控点时，会收到追踪信息。点击路径追踪，可查看车辆异常后的动向。如车已找回，请点击解除报警按钮，取消报警追踪。</string>
    <string name="str_prompt_alarm_words_push">点击路径追踪，可查看车辆异常后的动向。 如车已找回，请点击解除报警按钮，取消报警追踪。</string>
    <string name="str_prompt_abnormal_words_ps">（当车辆经过监控点时，会收到追踪信息。）</string>
    <string name="str_prompt_push_bike_alarm_1">您的车：</string>
    <string name="str_prompt_push_bike_alarm_2">已于：</string>
    <string name="str_prompt_push_bike_alarm_3_leave">离开：</string>
    <string name="str_prompt_push_bike_alarm_3_pass">经过：</string>
    <string name="str_prompt_push_bike_alarm_4">请确认是否正常！</string>
    <string name="str_prompt_push_msg1"><Data><![CDATA[您的自行车在<font color="#00CFB4"><b>&#160;%1$s&#160;</b></font>离开了您的停车位置(<font color="#00CFB4"><b>&#160;%2$s&#160;</b></font>),请确认是否正常。]]></Data></string>
    <string name="str_label_validate_code">验证码</string>
    <string name="str_btn_get_validate_code">短信验证码</string>
    <string name="str_btn_get_validate_code_2">获取验证码</string>
    <string name="str_btn_reget_validate_code">重新获取(%1$d)</string>
    <string name="str_btn_next">下一步</string>
    <string name="str_btn_bind">绑&#160;&#160;定</string>
    <string name="str_btn_update_bike_pic">更新车辆照片</string>
    <string name="str_btn_confirm_lock">确认锁定</string>
    <string name="str_btn_confirm_unlock">确认解锁</string>
    <string name="str_btn_confirm_back">返&#160;&#160;回</string>
    <string name="str_btn_confirm">确&#160;&#160;认</string>
    <string name="str_result_bind_success">绑定成功</string>
    <string name="str_result_lock_success">锁定成功</string>
    <string name="str_result_unlock_success">解锁成功</string>
    <string name="str_result_query_fail">位置查询失败</string>
    <string name="str_result_querying">位置查询中&#183;&#183;&#183;&#183;&#183;&#183;</string>
    <string name="str_welcome">欢迎使用校园自行车防盗系统</string>
    <string name="str_dialog_prompt_need_bind_lock">您还没有绑定车锁，请先完成绑定！</string>
    <string name="str_dialog_prompt_need_open_location">打开定位服务以提升定位准确性，是否现在开启？</string>
    <string name="str_dialog_prompt_confirm_removeBind_lock">您确定要解除绑定的车锁吗？解除后将收不到该车锁的位置信息！</string>
    <string name="str_dialog_prompt_need_login">您还没有登录，请先登录或注册！</string>
    <string name="str_dialog_prompt_need_grant_permission">该程序需要位置授权，否则将无法使用。</string>
    <string name="str_dialog_prompt_need_open_location_function">定位服务功能未开启，应用关闭。</string>
    <string name="str_dialog_prompt_need_grant_permission_storage">该程序需要读写SD卡授权，否则将无法使用。</string>
    <string name="str_dialog_prompt_token_expire">登录已过期，请重新登录。</string>
    <string name="str_dialog_prompt_need_grant_permission_camera">摄像头权限被关闭，请打开相应权限</string>
    <string name="str_dialog_prompt_need_confirm_logout">您确定退出登录状态吗？登出后将收不到信息推送。</string>
    <string name="str_dialog_btn_cancel">取消</string>
    <string name="str_dialog_btn_setting">设置</string>
    <string name="str_dialog_btn_open_location">马上开启</string>
    <string name="str_dialog_btn_confirm_removeBind">确认解除</string>
    <string name="str_dialog_btn_comfirm_logout">确认登出</string>
    <string name="str_dialog_btn_to_bind">马上绑定</string>
    <string name="str_dialog_btn_to_login">马上登录</string>
    <string name="str_dialog_btn_to_ok">确定</string>
    <string name="str_dialog_btn_lookover">查看</string>
    <string name="str_dialog_loading">请求处理中</string>
    <string name="str_dialog_btn_remove_abnormal">解除异常</string>
    <string name="str_dialog_btn_confirm_alert">确认报警</string>
    <string name="str_dialog_prompt_confirm_alert">请确认是否需要提交报警！\n如是本人取出前忘记解锁，可点击解除异常按钮，取消异常状态。</string>
    <string name="str_dialog_btn_remove_alarm">解除报警</string>
    <string name="str_dialog_btn_continue_location">路径追踪</string>
    <string name="str_dialog_btn_continue_location_detail">路径追踪</string>
    <string name="str_dialog_prompt_continue_location">请确认是否需要继续追踪！\n如车已找回，请点击解除报警按钮，取消报警追踪。</string>
    <string name="str_dialog_btn_using_close">关闭</string>
    <string name="str_net_request_fail">网络连接失败</string>
    <string name="str_network_closed">网络错误，请检查网络设置</string>
    <string name="str_login">登&#160;&#160;&#160;&#160;录</string>
    <string name="str_submit">提&#160;&#160;&#160;&#160;交</string>
    <string name="str_payment">支&#160;&#160;&#160;&#160;付</string>
    <string name="str_btn_save">保&#160;&#160;&#160;&#160;存</string>
    <string name="str_time_replace">:&#160;&#160;</string>
    <string name="str_btn_register">注&#160;&#160;册</string>
    <string name="str_btn_back">返&#160;&#160;回</string>
    <string name="str_btn_peruse_agree">我已阅读并同意</string>
    <string name="str_input_mobile_hint">请输入手机号</string>
    <string name="str_verify_code_hint">请输入验证码</string>
    <string name="str_prompt_back_key_exit">再按一次返回键退出</string>
    <string name="str_prompt_auto_login_fail">登录失败，请重新登录</string>
    <string name="str_panel_bike_site_number">停车港：%1$d</string>
    <string name="str_panel_to_bike_site_mode">放大校区</string>
    <string name="str_panel_to_school_detail_view">查看详情</string>
    <string name="str_please_wait">敬请期待</string>
    <string name="str_navigation_drawer_open">open</string>
    <string name="str_navigation_drawer_close">close</string>
    <string name="str_menu_item_my_account">我的账户</string>
    <string name="str_menu_item_my_lock">电子车牌</string>
    <string name="str_menu_item_my_trips">租车历程</string>
    <string name="str_menu_item_my_message">活动消息</string>
    <string name="str_menu_item_about_us">关于</string>
    <string name="str_title_main">主页</string>
    <string name="str_title_personal">个人资料</string>
    <string name="str_title_modify_pwd">修改密码</string>
    <string name="str_title_forget_pwd">忘记密码</string>
    <string name="str_title_settings">设置</string>
    <string name="str_title_mall">商城</string>
    <string name="str_menu_item_my_setting">系统设置</string>
    <string name="str_menu_item_my_authentication">我的资料</string>
    <string name="str_menu_item_my_authentication_info">认证信息</string>
    <string name="str_copyright">&#160;版权所有\nCopyright © 2016 I-Shion Riding\nAll Rights Reserved</string>
    <string name="str_toast_lock_success">车辆已锁定</string>
    <string name="str_toast_unlock_success">解锁成功</string>
    <string name="str_toast_removeBind_success">车锁已解绑</string>
    <string name="str_toast_bind_success">绑定成功</string>
    <string name="str_example_bike_pic">车辆全身照样张</string>
    <string name="str_upload_pic_from_camera">拍&#160;照</string>
    <string name="str_upload_pic_from_album">相&#160;册</string>
    <string name="str_area_price_city">省份/市</string>
    <string name="str_area_price_first_weight">首重(1KG)/元</string>
    <string name="str_area_price_next_weight">续重(1KG)/元</string>
    <string name="str_area_price_save">保存</string>
</resources>