<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_account"
            android:title="@string/str_menu_item_my_account" />

        <item
            android:id="@+id/nav_lock"
            android:title="@string/str_menu_item_my_lock"
            />

        <item
            android:id="@+id/nav_trips"
            android:title="@string/str_menu_item_my_trips" />

        <item
            android:id="@+id/nav_message"
            android:title="@string/str_menu_item_my_message" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/str_menu_item_my_setting" />

    </group>

    <!--<item android:title="分享和反馈">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:title="分享" />-->

            <!--<item-->
                <!--android:id="@+id/nav_feedback"-->
                <!--android:title="意见反馈" />-->
        <!--</menu>-->
    <!--</item>-->
</menu>