<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_image_bg">

    <RelativeLayout
        android:id="@+id/search_title_part"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title"
        android:background="@color/color_title_bg">

        <ImageView
            android:id="@+id/search_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:padding="8dp"
            android:src="@drawable/btn_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_title_area_price_set"
            android:textColor="@color/color_view_title_text"
            android:textSize="@dimen/font_content_size_2"/>

    </RelativeLayout>

    <View
        android:id="@+id/search_line_1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/search_title_part"
        android:background="#d3d4d8"/>

    <ScrollView
        android:id="@+id/sl_area_price"
        android:layout_below="@id/search_line_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/color_title_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_area_price_city"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_area_price_first_weight"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_area_price_next_weight"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <com.express56.xq.widget.CustomListView
                android:id="@+id/lv_area_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_area_price_save"
                android:layout_width="100dp"
                android:layout_height="36dp"
                android:text="@string/str_area_price_save"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/color_view_text"
                android:background="@drawable/btn_login_new"
                android:layout_gravity="center"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>